* Dialer (ECCP): add support for inactivity timeout in web agent console.
* Agent Console: add minimal error handling to javascript ajax methods.
* Agent Console: display VtigerCRM button only if VtigerCRM is installed
* Dialer: add code to repair corrupted audit entries on dialer startup.
* Agent Console: modify connect function in order to return result of login
  command, and use this to check whether ECCP login succeeded. 
* Calls per Agent: make call type specification case-insensitive
* Dialer: Specify a proper CallerID string as 'Agent/XXXX Login' to prevent 
  the softphones from displaying confusing strings as the CallerID.
* Campaign Monitoring: in case of client state hash mismatch, only reload if
  the request hash is identical to the one stored by the web client.
* Calls per hour, Graphics Calls per hour: transpose the rows and columns of the
  report so that the report is thinner. Fixes Elastix bug #1494.
* Campaign Monitoring: place incoming queue calls as the last items in the 
  drop-down list.
* Campaign Monitoring: append available campaigns to report list instead of 
  indexing by ID. Fixes Elastix bug #1496.
* Dialer: Check whether the agent is on break before deciding that it should
  receive a scheduled call. Fixes Elastix bug #1497.
* Login Logout: fix English translations for titles. Fixes Elastix bug #1491.
* Agent Console: apparently a jQuery update now sends null variables in 
  javascript structs as empty strings instead of not-set variables in a 
  $.post() request. This causes the non-SSE mode of the Agent Console to spin
  endlessly. Fixed. Fixes Elastix bug #1479.
* Do not Call List: The action "Apply" had no effect if there were no pending
  calls. This scenario could happen if the DNC is loaded prior to defining the
  first outgoing call. Fixed.
* Calls per Hour, Graphic Calls per Hour: queue dropdown selection has never 
  worked. Fixed. Also, synchronize code between the two modules. Fixes Elastix 
  bug #1452.