@@ -90,6 +90,7 @@ function form_Configuration(&$oDB, $smarty, $module_name, $local_templates_dir)
         'dialer.qos' => 'dialer_qos',
         'dialer.predictivo' => 'dialer_predictivo',
         'dialer.timeout_originate' => 'dialer_timeout_originate',
+        'dialer.timeout_inactivity' => 'dialer_timeout_inactivity',
     );
     $valoresForm = array(
         'asterisk_asthost' => '127.0.0.1',
@@ -105,6 +106,7 @@ function form_Configuration(&$oDB, $smarty, $module_name, $local_templates_dir)
         'dialer_qos' => '0.97',
         'dialer_predictivo' => 'on',
         'dialer_timeout_originate' => '0',
+        'dialer_timeout_inactivity' => '15',
     );
     foreach ($camposConocidos as $dbfield => $formfield) {
         if (isset($listaConf[$dbfield])) {
@@ -326,6 +328,14 @@ function createFieldForm()
         ),
         'dialer_timeout_originate'=> array(
             'LABEL'                     =>  _tr('Per-call dial timeout'),
+            'REQUIRED'                  =>  'yes',
+            'INPUT_TYPE'                =>  'TEXT',
+            'VALIDATION_TYPE'           =>  'ereg',
+            'INPUT_EXTRA_PARAM'         =>  '',
+            'VALIDATION_EXTRA_PARAM'    =>  '^[[:digit:]]+$',
+        ),
+        'dialer_timeout_inactivity'=> array(
+            'LABEL'                     =>  _tr('Agent inactivity timeout'),
             'REQUIRED'                  =>  'yes',
             'INPUT_TYPE'                =>  'TEXT',
             'VALIDATION_TYPE'           =>  'ereg',
